--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ matplotlib==3.4.2
 mccabe==0.6.1
 numpy==1.20.3
 panda==0.3.1
+pandas==1.2.4
 parso==0.8.1
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -161,6 +162,7 @@ pyobjc-framework-Vision==7.2
 pyobjc-framework-WebKit==7.2
 pyparsing==2.4.7
 python-dateutil==2.8.1
+pytz==2021.1
 pyzmq==20.0.0
 requests==2.25.1
 rope==0.19.0
