[GYRO] Fixed bug for gyro read in

--- a/vector.toml
+++ b/vector.toml
@@ -11,15 +11,10 @@
   drop_on_error = true
   source = """
     # Voltage + Gyro
-    # . |= parse_regex!(.message, r'^(?P<voltage>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?),(?P<accX>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?),(?P<accY>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?),(?P<accZ>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?),(?P<rotX>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?),(?P<rotY>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?),(?P<rotZ>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?),(?P<magX>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?),(?P<magY>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?),(?P<magZ>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?),(?P<temp>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?)$')
-    # Voltage only
-    # . |= parse_regex!(.message, r'^(?P<voltage>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?),$')
-    # Gyro only
-    . |= parse_regex!(.message, r'^((?P<accX>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?),(?P<accY>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?),(?P<accZ>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?),(?P<rotX>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?),(?P<rotY>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?),(?P<rotZ>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?),(?P<magX>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?),(?P<magY>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?),(?P<magZ>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?),(?P<temp>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?)$')
+    . |= parse_regex!(.message, r'^(?P<accX>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?),(?P<accY>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?),(?P<accZ>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?),(?P<rotX>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?),(?P<rotY>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?),(?P<rotZ>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?),(?P<magX>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?),(?P<magY>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?),(?P<magZ>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?),(?P<temp>(-?)(0|([1-9][0-9]*))(\\.[0-9]+)?)\r$')
 
     # Coerce parsed fields
     .timestamp = now()
-    # .voltage = to_float!(.voltage)
 
     .accX = to_float!(.accX)
     .accY = to_float!(.accY)
@@ -44,7 +39,12 @@
   """
 
 [sinks.out]
+# Console log
+#   type = "console"
+#   encoding.codec = "json"
+# File log
   type = "file"
-  inputs = ["modify"]
   encoding.codec = "ndjson"
   path = "recording.log"
+# General
+  inputs = ["modify"]
